# rust-project-entities

./: Cargo.toml  README.md
src/client/: date_time_chrono.rs  doc_xml.rs  example.rs  main.rs  oracle-test.rs  test.rs  test_works.rs
src/server/: Rocket.toml  main.rs
