[package]
name = "rust-personnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0.144"
serde-xml-rs = "0.6.0"
chrono = { version = "0.4.22", features = ["serde"] }
utf8-read = "0.4.0"
xml-rs = "0.8"
oracle = { version = "0.5.6", features = ["chrono"] }
log = "0.4"
serde_with = "2.0.1"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
rocket_codegen = "0.4.11"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3.3"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
